@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2016-2018 Chris K Wensel <chris@wensel.net>. All Rights Reserved.
  * Copyright (c) 2007-2017 Xplenty, Inc. All Rights Reserved.
  *
  * Project and contact information: http://www.cascading.org/
@@ -159,10 +160,15 @@ public class TapOutputCollector implements OutputCollector, Closeable
         {
         if( isFileOutputFormat )
           {
-          if( Hadoop18TapUtil.needsTaskCommit( conf ) )
+          boolean needsTaskCommit = Hadoop18TapUtil.needsTaskCommit( conf );
+
+          if( needsTaskCommit )
             Hadoop18TapUtil.commitTask( conf );
 
           Hadoop18TapUtil.cleanupJob( conf );
+
+          if( needsTaskCommit )
+            Hadoop18TapUtil.writeSuccessMarker( conf );
           }
         }
       }
